<resources>
    <string name="app_name">TaskManager </string>
    <string name="action_settings">Налаштування</string>
    <string name="button_add">Додати завдання</string>
    <string name="task_name">Тема</string>
    <string name="task_comment">Завдання</string>
    <string name="button_save">Готово</string>
    <string name="button_exit">Скасувати</string>
    <string name="title_main">Поточні завдання</string>
    <string name="tvTimeTaskStart">00.00.0000 00:00</string>
    <string name="tvTimeTaskFinish">00.00.0000 00:00</string>
    <string name="snack_start">Завдання розпочато о</string>
    <string name="snack_finish">Завдання завершене</string>
    <string name="snack_resume">Завдання вже завершено</string>
    <string name="snack_resume_yes">Так</string>
    <string name="add_tasks">Додати багато завданнь</string>
    <string name="remove_tasks">Видалити всі зардання</string>
    <string name="add_tasks_snack_1">Додано</string>
    <string name="add_tasks_snack_2">нових завдань</string>
    <string name="create_new">Новий</string>
    <string name="open">Відкрити</string>
    <string name="sort_tasks">Сортування</string>
    <string name="sort_task_by_date_first_yang">01-31</string>
    <string name="sort_task_by_date_first_old">31-01</string>
    <string name="sort_task_by_name_az">А-Я</string>
    <string name="sort_task_by_name_za">Я-А</string>
    <string name="title_add_new_task">Додати завдання</string>
    <string name="title_edit_task">Редагувати завдання</string>
    <string name="cancel">Скасувати</string>
    <string name="main_exit">Вихід</string>
    <string name="dialog_about_title">Увага!</string>
    <string name="dialog_about_message">Ви дійсно хочете знищити всі завдання?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="title_settings">Налаштування</string>
    <string name="snackbar_exit">Натисныть ще раз щоб вийти</string>
    <string name="color_palette">Color Palette</string>
    <string name="colors">Colors</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="more_info">More Info</string>
    <string name="basic">Basic</string>
    <string name="stacked">Stacked Buttons</string>
    <string name="neutral">Neutral Button</string>
    <string name="callbacks">Callbacks</string>
    <string name="list">Basic List</string>
    <string name="singleChoice">Single Choice</string>
    <string name="multiChoice">Multi Choice</string>
    <string name="customView">Custom View</string>
    <string name="themed">Themed</string>
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string-array name="socialNetworks">
        <item>Twitter</item>
        <item>Google+</item>
        <item>Instagram</item>
        <item>Facebook</item>
    </string-array>
    <string name="choose">Choose</string>
    <string name="speedBoost">Turn on speed boost now!</string>
    <string name="noThanks">No thanks</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>
    <string name="about">About</string>
    <string name="about_body"><![CDATA[
        material-dialogs, a library  designed by <b>Aidan Follestad</b>.<br/>
        <a href=\'http://aidanfollestad.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/afollestad\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://google.com/+AidanFollestad\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/afollestad\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/afollestad\'>LinkedIn</a>
    ]]></string>
    <string name="dismiss">Dismiss</string>
    <string name="basic_notitle">Basic (No Title)</string>
    <string name="shareLocationPrompt">This app wants to access your location.</string>
    <string name="basic_list_long">Basic List (Long)</string>
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="custom_listitem_button">A button!</string>
    <string name="custom_adapter">Custom Adapter</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae metus nec sapien elementum interdum ac mollis tortor. Nunc porttitor metus placerat orci auctor, sed dictum magna dapibus. Morbi a lacus ante. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin posuere nisl imperdiet lectus elementum accumsan. Etiam lacinia nisi ut nulla fermentum tempus. Integer ornare lacinia diam non maximus. Vestibulum iaculis urna eu elementum scelerisque. Etiam nisl erat, bibendum vitae magna nec, convallis malesuada erat. Cras non porttitor nibh. Pellentesque rhoncus sem luctus felis tincidunt bibendum. Pellentesque vulputate eros at nulla sollicitudin volutpat. Pellentesque laoreet est sit amet erat laoreet, id molestie nulla efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed varius nisl at imperdiet facilisis.</string>
    <string name="basic_longContent">Basic (Long Content)</string>
    <string name="basic_icon">Basic (Icon)</string>
    <string name="basic_list_notitle">Basic List (No Title)</string>
    <string name="folder_chooser">Folder Chooser</string>
    <string name="showCancelDismissCallbacks">Show/Cancel/Dismiss Callbacks</string>
    <string name="changelog">Changelog</string>
    <string name="customView_webView">Custom View No Scroll #1</string>
    <string name="color_chooser_primary">Color Chooser (Primary)</string>
    <string name="color_chooser_accent">Color Chooser (Accent)</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string-array name="socialNetworks_longItems">
        <item>Twitter is an online social networking service that enables users to send and read short 140-character messages called "tweets".</item>
        <item>Google+ is an interest-based social network that is owned and operated by Google Inc. The service is Google\'s fourth foray into social networking.</item>
        <item>Instagram is an online mobile photo-sharing, video-sharing and social networking service that enables its users to take pictures and videos, and share them on a variety of social networking platforms.</item>
        <item>Facebook is an online social networking service headquartered in Menlo Park, California. Its website was launched on February 4, 2004, by Mark Zuckerberg with friends.</item>
    </string-array>
    <string name="preference_dialogs">Preference Dialogs</string>
    <string name="list_pref_title">List Preference</string>
    <string name="list_pref_desc">This is an example of a list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="multilist_pref_title">Multi Select List Preference</string>
    <string name="multilist_pref_desc">This is an example of a multi select list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="edittext_pref_title">EditText Preference</string>
    <string name="edittext_pref_desc">This is an example of an EditText preference that automatically uses Material Dialogs to show the input dialog.</string>
    <string name="edittext_pref_dialogtitle">Enter a Name</string>
    <string name="edittext_pref_optionalvalue">Default value</string>
    <string name="progress_dialog_indeterminate">Progress Dialog (Indeterminate)</string>
    <string name="progress_dialog_indeterminate_horizontal">Progress Dialog (Horizontal Indeterminate)</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="please_wait">Please wait…</string>
    <string name="optional_dialog_message">This is an optional dialog message.</string>
    <string name="multiChoiceLimited">Multi Choice (Limit Selections)</string>
    <string name="selection_limit_reached">Selection limit reached!</string>
    <string name="back_button_label">Back</string>
    <string name="preference_dialog_message">This is an example of a dialog message.</string>
    <string name="preference_dialog_title">Dialog Title</string>
    <string name="pref_group_colors">Кольори стану завдань</string>
    <string name="preference_not_start">Не почате завдання</string>
    <string name="preference_not_start_message">Не почате завдання</string>
    <string name="not_start_pref_title">Не почате завдання</string>
    <string name="not_start_pref_summary">Виберіть колір для не початого завдання</string>
    <string name="on_start_pref_summary">Виберіть колір для авдання в роботі</string>
    <string name="on_start_pref_title">Завдання в роботі</string>
    <string name="on_finish_pref_title">Завдання виконано</string>
    <string name="on_finish_pref_summary">Виберіть колір для виконаного завдання</string>
    <string name="pref_group_colors_default">Стандартні кольори</string>
    <string name="default_pref_summary">Повернутись до стандартних кольорів</string>
    <string name="default_pref_title">Стандартні кольори</string>
</resources>