<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  tools:context=".activity.PreferencesActivity">

    <PreferenceCategory android:title="@string/pref_group_colors" >
        <com.afollestad.materialdialogs.prefs.MaterialDialogPreference
            android:dialogIcon="@drawable/ic_action_action_settings"
            android:dialogMessage="@string/preference_not_start_message"
            android:dialogTitle="@string/preference_not_start"
            android:key="unused_key00"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/not_start_pref_summary"
            android:title="@string/not_start_pref_title" />
        <com.afollestad.materialdialogs.prefs.MaterialDialogPreference
            android:dialogIcon="@drawable/ic_action_action_settings"
            android:dialogMessage="@string/preference_dialog_message"
            android:dialogTitle="@string/preference_dialog_title"
            android:key="unused_key00"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/on_start_pref_summary"
            android:title="@string/on_start_pref_title" />
        <com.afollestad.materialdialogs.prefs.MaterialDialogPreference
            android:dialogIcon="@drawable/ic_action_action_settings"
            android:dialogMessage="@string/preference_dialog_message"
            android:dialogTitle="@string/preference_dialog_title"
            android:key="unused_key00"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/on_finish_pref_summary"
            android:title="@string/on_finish_pref_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_colors_default" >
        <com.afollestad.materialdialogs.prefs.MaterialDialogPreference
            android:dialogIcon="@drawable/ic_action_action_settings"
            android:dialogMessage="@string/preference_dialog_message"
            android:dialogTitle="@string/preference_dialog_title"
            android:key="unused_key00"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/default_pref_summary"
            android:title="@string/default_pref_title" />
        <!--
        <EditTextPreference
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername"/>



        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>



    <com.afollestad.materialdialogs.prefs.MaterialDialogPreference
        android:dialogIcon="@drawable/ic_action_action_settings"
        android:dialogMessage="@string/preference_dialog_message"
        android:dialogTitle="@string/preference_dialog_title"
        android:key="unused_key00"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@android:string/ok"
        android:summary="@string/material_dialog_pref_summary"
        android:title="@string/material_dialog_pref_title" />

    <com.afollestad.materialdialogs.prefs.MaterialListPreference
        android:entries="@array/preference_values"
        android:entryValues="@array/preference_values"
        android:key="unused_key01"
        android:persistent="true"
        android:summary="@string/list_pref_desc"
        android:title="@string/list_pref_title" /-->

    <!--com.afollestad.materialdialogs.prefs.MaterialMultiSelectListPreference
        android:entries="@array/preference_values"
        android:entryValues="@array/preference_values"
        android:key="unused_key02"
        android:persistent="true"
        android:summary="@string/multilist_pref_desc"
        android:title="@string/multilist_pref_title" />

    <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
        android:defaultValue="@string/edittext_pref_optionalvalue"
        android:dialogMessage="@string/optional_dialog_message"
        android:dialogTitle="@string/edittext_pref_dialogtitle"
        android:inputType="textPersonName"
        android:key="unused_key03"
        android:persistent="true"
        android:summary="@string/edittext_pref_desc"
        android:title="@string/edittext_pref_title" /-->
    </PreferenceCategory>

</PreferenceScreen>