<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:background="@color/notStart"
                android:textColor="@color/white"
                android:id="@+id/item_container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNameTask"
        android:paddingLeft="5sp"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/tvCaptionTask"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCommentTask"
        android:layout_below="@+id/tvNameTask"
        android:nestedScrollingEnabled="false"
        android:paddingLeft="5dp"
        android:layout_alignRight="@+id/tvNameTask"
        android:layout_alignEnd="@+id/tvNameTask"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:id="@+id/tvCaptionTask"
            android:layout_toLeftOf="@+id/tvNameTask"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvCaptionComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_comment"
            android:layout_below="@+id/tvCaptionTask"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/tvCaptionTask"
            android:layout_alignEnd="@+id/tvCaptionTask"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvTimeTaskStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTimeTaskFinish"
            android:layout_below="@+id/tvCaptionComment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvTimeTaskFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTimeTaskStart"
            android:text="@string/tvTimeTaskFinish"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>